--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,12 +39,12 @@ steps:
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Run unit tests - $(buildConfiguration)'
+  displayName: 'Build the project - $(buildConfiguration)'
   inputs:
-    command: 'test'
-    arguments: '--no-build --configuration $(buildConfiguration)'
+    command: 'build'
+    arguments: '--no-restore --configuration $(buildConfiguration)'
     publishTestResults: true
-    projects: '**/*.Tests.csproj'
+    projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
   displayName: 'Publish the project - $(buildConfiguration)'
